implemented delete for reminder
