# specs/swagger.json
@@ -130,6 +130,78 @@
           }
         }
       }
+    },
+    "/schedule/{scheduleId}": {
+      "get": {
+        "tags": [
+          "schedule"
+        ],
+        "summary": "Find schedule by ID",
+        "description": "Returns a single task",
+        "operationId": "getScheduleById",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "scheduleId",
+            "in": "path",
+            "description": "ID of task",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Task"
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Task not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "schedule"
+        ],
+        "summary": "Deletes a task",
+        "description": "",
+        "operationId": "deleteTask",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "scheduleId",
+            "in": "path",
+            "description": "Task id to delete",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The info object list schduled events",
+            "schema": {
+              "$ref": "#/definitions/ScheduledEvents"
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Task not found"
+          }
+        }
+      }
     }
   },
   "definitions": {
